Add missing log category field

--- a/Stormancer.Plugins.Database.Server/Stormancer.Plugins.Database.Server.csproj
+++ b/Stormancer.Plugins.Database.Server/Stormancer.Plugins.Database.Server.csproj
@@ -80,6 +80,8 @@
   <ItemGroup>
     <Compile Include="AuthenticatedHttpClientHandler.cs" />
     <Compile Include="ESClientFactory.cs" />
+    <Compile Include="ESClientFactoryEventHandler.cs" />
+    <Compile Include="Formatters.cs" />
     <Compile Include="IIndex.cs" />
     <Compile Include="IndexExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
